--- a/docs/src/content/docs/getting-started/changelog.mdx
+++ b/docs/src/content/docs/getting-started/changelog.mdx
@@ -118,7 +118,7 @@ To see the boosts, requirements and all information on the boss, see our [The Hu
 
 ### [[DayV-git]]
 
-- Fix araxxor boss task requidrements
+- Fix araxxor boss task requirements
 - Allow buying genie lamps with frog tokens
 - Fixed a bug with agility-alching sometimes picking the wrong item
 - Improved the formatting of some messages
