--- a/docs/src/content/docs/bso/changelog.mdx
+++ b/docs/src/content/docs/bso/changelog.mdx
@@ -2,9 +2,32 @@
 title: "Changelog"
 sidebar:
   order: 1
+tableOfContents: false
 ---
+import Update from '../../../components/Update.astro';
 
 Generally only changes that are specific to BSO are included here, for a full list of OSB changes see the [OSB Changelog](/changelog).
+
+<Update date="18/12/2024" firstHash="dd98c03c941d4a45e544390d2833c4cfc0e9c843" secondHash="837e89eacb67e6f187c5ac1d851bdf010c8c940c" isNew />
+
+### [[gc]]
+
+- Added a new [[Frozen crate (s8)]] key crate, which replaces the spooky crate.
+- Added the Christmas Event! Here are the instructions and information:
+
+  First, chop 8 [[Snowdream logs]], and create a [[Snowdream staff]] from them. Then, runecraft some [[Snowdream rune]] runes. Equip the staff anywhere, and your minion will automatically begin using the runes passively on trips, and give you chances at getting the reward items. When you run out of runes, you will need to buy/runecraft more. If you want to get a faster/higher chance of receiving reward items, you can do the "active" version, of actively casting the spell (on a minion trip keeping your minion busy), which will grant you 2.5x higher droprates than the passive version.
+
+  - Check your info with [[/christmas check]] 
+  - To do the 'active casting', use [[/christmas active_cast]]. Note that you can pick your trip length of 1, 2 or 3 hours for this.
+  - View the droprates with [[/christmas drop_rates]]
+  - Your minion is casting a spell to help children fall asleep on christmas eve, or something like that.
+  - The event is planned to go on for roughly 10 days.
+  - Irons are given a snowflake amulet which gives 3x more snowdream runes.
+  - Non-irons can make 75 snowdream runes per minute, 4500/hr. You use 30 snowdream runes per minute.
+
+  These are all the available rewards from the event:
+
+  [[Snowdream robe legs]] [[Snowdream wizard hat]] [[Snowdream robe top]] [[Snowdream wizard socks]] [[Black santa top]] [[Black santa legs]] [[Black santa gloves]] [[Black santa boots]] [[Snowdream rune]] [[Snowdream pillow]] [[Chef-touched heart (choc)]] [[Sungod slippers]] [[Icey santa hat]] [[Grinchling]] [[Shrimpy]] [[Snowflake amulet]] [[Snowdream staff]]
 
 ## 29/10/2024
 
