--- a/docs/src/content/docs/osb/Raids/toa.mdx
+++ b/docs/src/content/docs/osb/Raids/toa.mdx
@@ -20,7 +20,7 @@ Solo Tombs of Amascut requires 1 KC for every 10 levels of invocation. E.g. a 50
 - 10 Saradomin Brew(4), 5 Super Restore (4), 1 Ranging Potion(4), 1 Super Combat Potion(4), 1 Sanfew Serum(4). Sanfew Serum can be ignored by equipping a charged Serpentine helm
 - Zamorakian Hasta, Ghrazi Rapier, **OR** Osmumten's Fang in melee
 - [[Fire cape]] **OR** [[Infernal cape]] in melee
-- [[Twisted Bow]] **OR** Bow of Faedhinen (c) in range
+- [[Twisted Bow]] **OR** Bow of Faerdhinen (c) in range
   - Minimum of 150 arrows equipped if using Twisted bow.
 - Charged Blowpipe in bank
   - Minimum of 150 darts and 1,000 scales within Blowpipe.
@@ -68,7 +68,7 @@ Higher levels will take longer but offer better chances at uniques.
 - Can be charged with chaos and soul runes.
 - Provides a 25% speed boost to ToA when equipped in magic setup.
 - Requires 85 magic to equip.
-- [[/minion chargeitem\: ``Tumeken's shadow amount\:100]]
+- [[/minion charge item\: Tumeken's shadow amount\:100]]
 
 ### Masori Armour
 
@@ -103,6 +103,8 @@ Higher levels will take longer but offer better chances at uniques.
 - These are given at a 1/3 chance when the raid invo is 450 or higher, and there are no deaths.
 - You can use each remnant on Tumeken's guardian to transmog it.
 - When changing/reverting the transmog, you will receive the remnant back.
+- Ex. [[/create item\:Tumeken's damaged guardian]]
+- Ex. [[/create item\:Revert Tumeken's damaged guardian]]
 - The names for each of the transmogs are:
   - Elidinis' damaged guardian
   - Tumeken's damaged guardian
