--- a/docs/src/content/docs/osb/Raids/tob.mdx
+++ b/docs/src/content/docs/osb/Raids/tob.mdx
@@ -10,7 +10,6 @@ To start a hard mode tob raid, use [[/raid tob start hard_mode\:true]]
 
 You can see your KC, attempts and death chances using [[/raid tob stats]]
 
-
 ## Requirements
 
 - 90 Attack/Strength/Defence/Range, 94 Magic, 77 Prayer
@@ -26,7 +25,7 @@ You can see your KC, attempts and death chances using [[/raid tob stats]]
 - 3 Karambwans per kc, if you're less than 20kc
 - 20+ HP healing food (e.g. sharks) (more if less than 20 kc)
 
-_- An uncharged scythe will still suffice, however, will only provide a 6% boost compared to the 15% the charged version gives. View [charging items here.](https://wiki.oldschool.gg/osb/miscelleanous/charging-items)
+\_- An uncharged scythe will still suffice, however, will only provide a 6% boost compared to the 15% the charged version gives. View [charging items here.](https://wiki.oldschool.gg/osb/miscelleanous/charging-items)
 
 ---
 
