--- a/docs/src/content/docs/osb/combat-achievements.mdx
+++ b/docs/src/content/docs/osb/combat-achievements.mdx
@@ -31,45 +31,46 @@ Rewards can be claimed by using [[/ca claim]] after completing a new tier. You c
     - 100% bonus Warrior's guild tokens
   </TabItem>
 
-  <TabItem label="Medium">
-  - Ghommal's hilt 2
-  - An antique lamp that gives 10,000xp in any skill above level 30
-  - 5% increase to receive Medium clue scrolls
-  - Slayer boss tasks are increased by 5 (45 total)
-  - Pest control games give 2 bonus points
-  - 200% bonus Warrior's guild tokens
-  </TabItem>
+{" "}
 
-  <TabItem label="Hard">
-  - Ghommal's hilt 3
-  - An antique lamp that gives 15,000xp in any skill above level 40
-  - 5% increase to receive Hard clue scrolls
-  - Slayer boss tasks are increased by 5 (50 total)
-  - Pest control games give 3 bonus points
-  - NMZ imbue costs are halved
-  - Ability to create King black dragon DHC [[/create item\:Dragon hunter crossbow (b)]]
-  </TabItem>
+<TabItem label="Medium">
+	- Ghommal's hilt 2 - An antique lamp that gives 10,000xp in any skill above
+	level 30 - 5% increase to receive Medium clue scrolls - Slayer boss tasks are
+	increased by 5 (45 total) - Pest control games give 2 bonus points - 200%
+	bonus Warrior's guild tokens
+</TabItem>
 
+{" "}
 
-  <TabItem label="Elite">
-  - Ghommal's hilt 4
-  - An antique lamp that gives 25,000xp in any skill above level 50
-  - 5% increase to receive Elite clue scrolls
-  - Slayer boss tasks are increased by 5 (55 total)
-  - Superiors are 25% more likely to appear during Slayer
-  - Ability to create Tztok slayer helmet [[/create item\:Tztok slayer helmet]]
-  - Ability to create Vorkath DHC [[/create item\:Dragon hunter crossbow]]
-  </TabItem>
+<TabItem label="Hard">
+	- Ghommal's hilt 3 - An antique lamp that gives 15,000xp in any skill above
+	level 40 - 5% increase to receive Hard clue scrolls - Slayer boss tasks are
+	increased by 5 (50 total) - Pest control games give 3 bonus points - NMZ imbue
+	costs are halved - Ability to create King black dragon DHC [[/create
+	item\:Dragon hunter crossbow (b)]]
+</TabItem>
 
+{" "}
 
-  <TabItem label="Master">
-  - Ghommal's hilt 5
-  - An antique lamp that gives 35,000xp in any skill above level 60
-  - Slayer boss tasks are increased by 5 (60 total)
-  - Ghommal's lucky penny (when equipped, 5% chance to not use a charge on any chargeable item)
-  - Ability to create Vampyric slayer helmet [[/create item\:Vampyric slayer helmet]]
-  - Ability to combine Avernic defender with Ghommal's hilt 5 [[/create item\:Ghommal's avernic defender 5]]
-  </TabItem>
+<TabItem label="Elite">
+	- Ghommal's hilt 4 - An antique lamp that gives 25,000xp in any skill above
+	level 50 - 5% increase to receive Elite clue scrolls - Slayer boss tasks are
+	increased by 5 (55 total) - Superiors are 25% more likely to appear during
+	Slayer - Ability to create Tztok slayer helmet [[/create item\:Tztok slayer
+	helmet]] - Ability to create Vorkath DHC [[/create item\:Dragon hunter
+	crossbow]]
+</TabItem>
+
+{" "}
+
+<TabItem label="Master">
+	- Ghommal's hilt 5 - An antique lamp that gives 35,000xp in any skill above
+	level 60 - Slayer boss tasks are increased by 5 (60 total) - Ghommal's lucky
+	penny (when equipped, 5% chance to not use a charge on any chargeable item) -
+	Ability to create Vampyric slayer helmet [[/create item\:Vampyric slayer
+	helmet]] - Ability to combine Avernic defender with Ghommal's hilt 5 [[/create
+	item\:Ghommal's avernic defender 5]]
+</TabItem>
 
   <TabItem label="Grandmaster">
   - Ghommal's hilt 6
@@ -83,4 +84,5 @@ Rewards can be claimed by using [[/ca claim]] after completing a new tier. You c
 import { Leagues } from "../../../components/Leagues";
 
 ## Combat Achievements
+
 <Leagues client:load />
