--- a/docs/src/content/docs/bso/changelog.mdx
+++ b/docs/src/content/docs/bso/changelog.mdx
@@ -4,13 +4,20 @@ sidebar:
   order: 1
 tableOfContents: false
 ---
-import Update from '../../../components/Update.astro';
+
+import Update from "../../../components/Update.astro";
 
 Generally only changes that are specific to BSO are included here, for a full list of OSB changes see the [OSB Changelog](/changelog).
 
-<Update date="29/12/2024" firstHash="837e89eacb67e6f187c5ac1d851bdf010c8c940c" secondHash="75ddf64d7e28b473e937426dbe058af72f619421" isNew />
+<Update
+	date="29/12/2024"
+	firstHash="837e89eacb67e6f187c5ac1d851bdf010c8c940c"
+	secondHash="75ddf64d7e28b473e937426dbe058af72f619421"
+	isNew
+/>
 
 ### [[gc]]
+
 - Made improvements to giveaways, so that huge giveaways dont cause problems anymore.
 - Added aliases for supply crates and their keys. An alias is an alternate name, e.g. how you can use "tmb" instead of writing "Tradeables mystery box". You can now write "s1" for a s1 crate, and "s1 key" for the key (and so on for the others).
 - Added christmas cracker to christmas cracker cl
@@ -20,7 +27,11 @@ Generally only changes that are specific to BSO are included here, for a full li
 - Improved IC donation message, so the person sees their next IC.
 - Removed some duplicate collection logs that were mistakenly there.
 
-<Update date="18/12/2024" firstHash="dd98c03c941d4a45e544390d2833c4cfc0e9c843" secondHash="837e89eacb67e6f187c5ac1d851bdf010c8c940c" />
+<Update
+	date="18/12/2024"
+	firstHash="dd98c03c941d4a45e544390d2833c4cfc0e9c843"
+	secondHash="837e89eacb67e6f187c5ac1d851bdf010c8c940c"
+/>
 
 ### [[gc]]
 
@@ -29,7 +40,7 @@ Generally only changes that are specific to BSO are included here, for a full li
 
   First, chop 8 [[Snowdream logs]], and create a [[Snowdream staff]] from them. Then, runecraft some [[Snowdream rune]] runes. Equip the staff anywhere, and your minion will automatically begin using the runes passively on trips, and give you chances at getting the reward items. When you run out of runes, you will need to buy/runecraft more. If you want to get a faster/higher chance of receiving reward items, you can do the "active" version, of actively casting the spell (on a minion trip keeping your minion busy), which will grant you 2.5x higher droprates than the passive version.
 
-  - Check your info with [[/christmas check]] 
+  - Check your info with [[/christmas check]]
   - To do the 'active casting', use [[/christmas active_cast]]. Note that you can pick your trip length of 1, 2 or 3 hours for this.
   - View the droprates with [[/christmas drop_rates]]
   - Your minion is casting a spell to help children fall asleep on christmas eve, or something like that.
