--- a/docs/src/content/docs/osb/Miscelleanous/bingo.mdx
+++ b/docs/src/content/docs/osb/Miscelleanous/bingo.mdx
@@ -1,7 +1,6 @@
 ---
 title: "Bingo"
 ---
-
 import Time from "../../../../components/Time.astro";
 
 You can run community bingo's using the `/bingo` command, and the bot will automatically handle all of it for you.
@@ -42,9 +41,9 @@ You can add tiles in 2 ways.
 Start Date: <Time time="2024-10-25 12:00:00 UTC"/>
 
 Finish Date: <Time time="2024-11-8 12:00:00 UTC"/>
-OSB Bingo #3 has finished!
+OSB Bingo #3  has finished!
 
-**1st**: @vKoko @delman @Merisorax @Huśtajdupa @Prztynkinista
+**1st**: @vKoko @delman @Merisorax  @Huśtajdupa  @Prztynkinista
 (Prize Pool 22.825b)
 
 **2nd** Place @Ironici @Ecto @TheItchIsReal @CrankItUp @drunkenbeer
@@ -54,7 +53,6 @@ OSB Bingo #3 has finished!
 (Prize Pool 6.225b)
 
 The Below Winner is the OSB Bingo #3 MvP which has won the following:
-
 - 2b Coins
 - 1m Sunfire Splinters
 - 2 x Scythe of Vitur (uncharged)
@@ -68,7 +66,7 @@ The Below Winner is the OSB Bingo #3 MvP which has won the following:
 - Spectral Spirit Shield
 - Thammarons Sceptre (u)
 - Zaryte Crossbow
-  Donated by Loot Game Event Team
+Donated by Loot Game Event Team
 
 **MvP:** Garousse with 13!!! Solo Tiles
 
@@ -80,8 +78,7 @@ You can see the actual GP prize pool with the bingo command.
 - 2nd Place team - 30% of GP Prize Pool
 - 3rd Place team - 15% of GP Prize Pool
 
-_More rewards may be added later_
-
+*More rewards may be added later*
 </details>
 
 <details>
@@ -95,56 +92,36 @@ You can earn a Trophy (an item you get in your bank) by your performance. You ge
 - Adamant - top 20% - Guaranteed at 16 Tiles
 - Rune - top 10% - Guaranteed at 22 Tiles
 - Dragon - top 5% - Guaranteed at 28 Tiles
-  </details>
+</details>
 
 <details>
-	<summary>Tiles</summary>
-	1. Receive A Skilling Pet - Receive Any Pet From The Skilling Pet CL (No
-	Exclusions) 1. Receive Any Nightmare Orb - Receive Any of The Following -
-	Eldritch Orb, Volatile Orb, Harmonised Orb 1. Receive Any Sigil From The
-	Corporeal Beast - Receive Any of The Following - Spectral Sigil, Arcane Sigil,
-	Elysian Sigil 1. Receive All 3 Voidwaker Items - Receive All of The Following
-	- Voidwaker Gem, Voidwaker Blade, Voidwaker Hilt 1. Receive A Revenant Weapon
-	- Receive Any of The Following - Craws Bow (u), Thammaron's Sceptre (u),
-	Viggora's Chainmace (u) 1. Receive Any Mutagen From Zulrah - Receive Any of
-	The Following - Tanzanite Mutagen, Magma Mutagen 1. Receive One Piece of
-	Ancestral Robes From CoX - Receive Any of The Following - Ancestral Hat,
-	Ancestral Robe Top, Ancestral Robe Bottom 1. Receive One Unique Weapon From
-	ToB - Receive Any of The Following - Scythe of vitur (uncharged), Ghrazi
-	rapier, Sanguinesti staff (uncharged) 1. Receive Both A Cursed Phalanx and
-	Osmumtens Fang From ToA - Receive All of The Following Items - Cursed Phalanx,
-	Osmumtens Fang 1. Receive 10k Mahogany Logs - Receive 10,000 Mahogany Logs
-	From Skilling or PvM 1. Receive 50 Brimstone Keys - Receive 50 Brimstone Keys
-	From Konar Slayer Tasks 1. Receive Hydra's Heart, Fang and Eye - Receive All
-	of The Following - Hydra Heart, Hydra Fang, Hydra Eye 1. Receive A Gnome Scarf
-	- Receive a Gnome Scarf From The Gnome Restaurant Minigame 1. Receive Every
-	Champion Scroll - Receive All of The Following - Earth warrior champion
-	scroll, Ghoul champion scroll, Giant champion scroll, Goblin champion scroll,
-	Hobgoblin champion scroll, Imp champion scroll, Jogre champion scroll, Lesser
-	demon champion scroll, Skeleton champion scroll, Zombie champion scroll 1.
-	Receive A Ring of Endurance - Receive a Ring of Endurance (Uncharged) From
-	Hallowed Sepulchre 1. Create A Dt2 Ring From Scratch - You Must Obtain All
-	Pieces for 1 Ring and Create 1 Ring 1. Create a Odium or Malediction Ward From
-	Scratch - You Must Obtain All Pieces for 1 Ward and Create 1 Ward 1. Receive a
-	Crystal Tool Seed - Receive A Crystal Tool Seed From Zalcano 1. Receive Elder
-	Chaos Hood / Top / Robe - Receive All of The Following - Elder Chaos Hood,
-	Elder Chaos Top, Elder Chaos Robe 1. Receive a Dragon Warhammer - Receive A
-	Dragon Warhammer From Lizardman Shamans 1. Receive One of Big Bass / Big
-	Swordfish / Big Shark - Receive Either a Big Bass, Big Swordfish or Big Shark
-	From Fishing 1. Receive a Visage Drop - Receive Any of The Following -
-	Draconic Visage, Skeletal Visage, Wyvern Visage 1. Receive Any Unique Seed
-	From The Gauntlet - Receive Any of The Following - Crystal Weapon Seed,
-	Crystal Armour Seed, Enhanced Crystal Weapon Seed 1. Receive Sunfire Fanatic
-	Helm / Cuirass / Chausses - Receive All of The Following - Sunfire Fanatic
-	Helm, Sunfire Fanatic Cuirass, Sunfire Fanatic Chausses 1. Receive One Araxyte
-	Fang - From Araxxor 1. Receive a Boss Pet - Receive Any of The Following - Pet
-	dagannoth supreme, Pet dagannoth prime, Pet dagannoth rex, Pet kree'arra, Pet
-	general graardor, Pet zilyana, Pet k'ril tsutsaroth, Baby mole, Prince black
-	dragon, Kalphite princess, Pet smoke devil, Pet kraken, Pet dark core, Pet
-	snakeling, Venenatis spiderling, Callisto cub, Vet'ion jr., Scorpia's
-	offspring, Hellpuppy, Olmlet, Noon, Vorki, Lil' zik, Ikkle hydra, Sraracha,
-	Little nightmare, Nexling, Tumeken's guardian, Muphin, Wisp, Butch,
-	Lil'viathan, Baron, Nid, Scurry 1. Receive a Boss Jar - Receive Any Jar
-	(Excluding Jar or Darkness + Jar of Miasma) 1. Receive a Tormented Demon
-	Unique - Receive Any of The Following - Burning Claw or Tormented Synapse
+<summary>Tiles</summary>
+1. Receive A Skilling Pet - Receive Any Pet From The Skilling Pet CL (No Exclusions)
+1. Receive Any Nightmare Orb - Receive Any of The Following - Eldritch Orb, Volatile Orb, Harmonised Orb
+1. Receive Any Sigil From The Corporeal Beast - Receive Any of The Following - Spectral Sigil, Arcane Sigil, Elysian Sigil
+1. Receive All 3 Voidwaker Items - Receive All of The Following - Voidwaker Gem, Voidwaker Blade, Voidwaker Hilt
+1. Receive A Revenant Weapon - Receive Any of The Following - Craws Bow (u), Thammaron's Sceptre (u), Viggora's Chainmace (u)
+1. Receive Any Mutagen From Zulrah - Receive Any of The Following - Tanzanite Mutagen, Magma Mutagen
+1. Receive One Piece of Ancestral Robes From CoX - Receive Any of The Following - Ancestral Hat, Ancestral Robe Top, Ancestral Robe Bottom
+1. Receive One Unique Weapon From ToB - Receive Any of The Following - Scythe of vitur (uncharged), Ghrazi rapier, Sanguinesti staff (uncharged)
+1. Receive Both A Cursed Phalanx and Osmumtens Fang From ToA - Receive All of The Following Items - Cursed Phalanx, Osmumtens Fang
+1. Receive 10k Mahogany Logs -  Receive 10,000 Mahogany Logs From Skilling or PvM
+1. Receive 50 Brimstone Keys - Receive 50 Brimstone Keys From Konar Slayer Tasks
+1. Receive Hydra's Heart, Fang and Eye - Receive All of The Following - Hydra Heart, Hydra Fang, Hydra Eye
+1. Receive A Gnome Scarf - Receive a Gnome Scarf From The Gnome Restaurant Minigame
+1. Receive Every Champion Scroll - Receive All of The Following - Earth warrior champion scroll, Ghoul champion scroll, Giant champion scroll, Goblin champion scroll, Hobgoblin champion scroll, Imp champion scroll, Jogre champion scroll, Lesser demon champion scroll, Skeleton champion scroll, Zombie champion scroll
+1. Receive A Ring of Endurance -  Receive a Ring of Endurance (Uncharged) From Hallowed Sepulchre
+1. Create A Dt2 Ring From Scratch - You Must Obtain All Pieces for 1 Ring and Create 1 Ring
+1. Create a Odium or Malediction Ward From Scratch - You Must Obtain All Pieces for 1 Ward and Create 1 Ward
+1. Receive a Crystal Tool Seed - Receive A Crystal Tool Seed From Zalcano
+1. Receive Elder Chaos Hood / Top / Robe - Receive All of The Following - Elder Chaos Hood, Elder Chaos Top, Elder Chaos Robe
+1. Receive a Dragon Warhammer - Receive A Dragon Warhammer From Lizardman Shamans
+1. Receive One of Big Bass / Big Swordfish / Big Shark - Receive Either a Big Bass, Big Swordfish or Big Shark From Fishing
+1. Receive a Visage Drop - Receive Any of The Following - Draconic Visage, Skeletal Visage, Wyvern Visage
+1. Receive Any Unique Seed From The Gauntlet - Receive Any of The Following - Crystal Weapon Seed, Crystal Armour Seed, Enhanced Crystal Weapon Seed
+1. Receive Sunfire Fanatic Helm / Cuirass / Chausses - Receive All of The Following - Sunfire Fanatic Helm, Sunfire Fanatic Cuirass, Sunfire Fanatic Chausses
+1. Receive One Araxyte Fang - From Araxxor
+1. Receive a Boss Pet - Receive Any of The Following -  Pet dagannoth supreme, Pet dagannoth prime, Pet dagannoth rex, Pet kree'arra, Pet general graardor, Pet zilyana, Pet k'ril tsutsaroth, Baby mole, Prince black dragon, Kalphite princess, Pet smoke devil, Pet kraken, Pet dark core, Pet snakeling, Venenatis spiderling, Callisto cub, Vet'ion jr., Scorpia's offspring, Hellpuppy, Olmlet, Noon, Vorki, Lil' zik, Ikkle hydra, Sraracha, Little nightmare, Nexling, Tumeken's guardian, Muphin, Wisp, Butch, Lil'viathan, Baron, Nid, Scurry
+1. Receive a Boss Jar - Receive Any Jar (Excluding Jar or Darkness + Jar of Miasma)
+1. Receive a Tormented Demon Unique - Receive Any of The Following - Burning Claw or Tormented Synapse
 </details>
