Update bso changelog

--- a/docs/src/content/docs/bso/changelog.mdx
+++ b/docs/src/content/docs/bso/changelog.mdx
@@ -10,10 +10,54 @@ import Update from "../../../components/Update.astro";
 Generally only changes that are specific to BSO are included here, for a full list of OSB changes see the [OSB Changelog](/changelog).
 
 <Update
+	date="11/05/2025"
+	firstHash="75ddf64d7e28b473e937426dbe058af72f619421"
+	secondHash="368cf0543179ebdffa4e46a3301be26c2f9df999"
+	isNew
+/>
+
+### [[gc]]
+
+- Ended the easter event
+- Improved the icon for [[BSO Santa hat]]
+- [Added Shrimplings.](https://github.com/oldschoolgg/oldschoolbot/commit/837953ec4) [[Shrimpling]]'s are a new impling that drop from activities
+in underwater/oceanic locations, which are: Drift net, underwater agility/thieving, DOA, fishing trawler, aerial fishing, ANY [[/fish]]
+fishing trip, camdozaal fishing, fishing contest. Shrimplings always drop raw food, and a chance of: [[Clue scroll (grandmaster)]], and [[Elder scroll piece]].
+- [Added [[Elder scroll piece]] to skilling clues table](https://github.com/oldschoolgg/oldschoolbot/commit/110614417), you can now get them from regular skilling activities that give clues.
+- [Buffed Elder scroll droprate at Akumu and Venatrix](https://github.com/oldschoolgg/oldschoolbot/commit/97421eba3)
+- [Added key crates to drystreaks](https://github.com/oldschoolgg/oldschoolbot/commit/9b96ff1d8) 
+- [Added inverted master capes](https://github.com/oldschoolgg/oldschoolbot/commit/89fba5214) [[Attack master cape (inverted)]]
+- [Made inverted capes creatable/revertable](https://github.com/oldschoolgg/oldschoolbot/commit/339a11486)
+- [Drygore items now drop in order, and chitin is twice as common](https://github.com/oldschoolgg/oldschoolbot/commit/d7b260448) 
+- [Made [[Baby yaga house]] tradeable](https://github.com/oldschoolgg/oldschoolbot/commit/b91b93835) 
+- [Added Elder scrolls to Elder birdhouses](https://github.com/oldschoolgg/oldschoolbot/commit/5a194e252)
+- [Buffed the droprate of GMC's from Elder birdhouses](https://github.com/oldschoolgg/oldschoolbot/commit/5a194e252)
+- [The following implings now drop Elder scrolls at a rate of 1 in 100: Mystery, Shrimpling, Chimpling, Eternal.](https://github.com/oldschoolgg/oldschoolbot/commit/25c105cbf) 
+- [Removed easter crates](https://github.com/oldschoolgg/oldschoolbot/commit/5688db4ad) 
+- [Renamed Demonic hween to Bloody halloween mask](https://github.com/oldschoolgg/oldschoolbot/commit/5b18ec259) 
+- [Fix image issue, tries to draw bso items from osb spritesheet](https://github.com/oldschoolgg/oldschoolbot/commit/49c163caa)
+- [Fix broken emoji](https://github.com/oldschoolgg/oldschoolbot/commit/425a5c93d) 
+- [Add missing easter pets to easter event buff](https://github.com/oldschoolgg/oldschoolbot/commit/03d98075f) 
+- [Fix custom monster killing not including special loot](https://github.com/oldschoolgg/oldschoolbot/commit/5ea6a2b19) 
+
+### [[themrrobert]]
+
+- [Add shrimplings to openables (#6366)](https://github.com/oldschoolgg/oldschoolbot/commit/658f86302) 
+- [Fix Easter giving multiple identical drops when CL complete (#6373)](https://github.com/oldschoolgg/oldschoolbot/commit/0c7e9c906)
+- [Extended the easter event, and adjust drop rates based on CL (#6375)](https://github.com/oldschoolgg/oldschoolbot/commit/df2cac9c9)
+
+### [[nwjgit]]
+
+- [Allow disabling tame jar opening (#6313)](https://github.com/oldschoolgg/oldschoolbot/commit/5ff26a3c5)
+- [Deathtouched dart bugfix (#6342)](https://github.com/oldschoolgg/oldschoolbot/commit/d293c3f8e) 
+- [Allow adding metamorphed mumpkins to cl (#6352)](https://github.com/oldschoolgg/oldschoolbot/commit/a5e4da866)
+- [Toggle to disable pets when opening items (#6353)](https://github.com/oldschoolgg/oldschoolbot/commit/57a920c6b)
+- [Remove snooze spell activity from music cape requirments (#6346)](https://github.com/oldschoolgg/oldschoolbot/commit/5f2ef5569) 
+
+<Update
 	date="29/12/2024"
 	firstHash="837e89eacb67e6f187c5ac1d851bdf010c8c940c"
 	secondHash="75ddf64d7e28b473e937426dbe058af72f619421"
-	isNew
 />
 
 ### [[gc]]
