Cleanup more wiki pages

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -14,7 +14,7 @@ Minions are entirely virtual, and not in any way tradeable for real GP or real m
 
 ## Getting Started
 
-**To get started, firstly read the** [**rules**](https://wiki.oldschool.gg/getting-started/rules/), then get yourself a minion by typing `/minion buy`. If your Discord account is 6 months old or older, your minion will be free. If it is between 1 and 6 months old, your minion will cost 20m. If your account is less than one month old, you are currently unable to purchase a minion as a precaution against alt accounts and bots (unless you become a patron which bypasses this restriction). To get your starting gp, you can use the `/minion daily` command every 12 hours to get a trivia question you can answer for gp and special Diango items.
+**To get started, firstly read the** [**rules**](https://wiki.oldschool.gg/getting-started/rules/), then get yourself a minion by typing [[/minion buy]]. If your Discord account is 6 months old or older, your minion will be free. If it is between 1 and 6 months old, your minion will cost 20m. If your account is less than one month old, you are currently unable to purchase a minion as a precaution against alt accounts and bots (unless you become a patron which bypasses this restriction). To get your starting gp, you can use the [[/minion daily]] command every 12 hours to get a trivia question you can answer for gp and special Diango items.
 
 Next, decide what you want to do. Skilling? PVM? Questing? Have a look around the rest of the wiki to see what you can do, and how - and just do whatever you want to do!
 
