--- a/docs/src/content/docs/osb/Miscelleanous/bingo.mdx
+++ b/docs/src/content/docs/osb/Miscelleanous/bingo.mdx
@@ -3,12 +3,12 @@ title: "Bingo"
 ---
 import Time from "../../../../components/Time.astro";
 
-You can run community bingo's using the `/bingo` command, and the bot will automatically handle all of it for you.
+You can run community bingo's using the [[/bingo]] command, and the bot will automatically handle all of it for you.
 
 ## Notes
 
 - Ironmen can join bingos for free. They cannot be given GP prizes, or create bingos.
-- Upon the bingo finishing, the creator of the bingo needs to do `/bingo finalize` to receive the GP pool. The creator of the bingo is responsible for handing out the GP, based on whatever split you have decided. You do not need to finalize the bingo on time, the bingo will automatically finish at the exact second it needs to, the finalize command just does some final things, and hands out the gp.
+- Upon the bingo finishing, the creator of the bingo needs to do [[/bingo finalize]] to receive the GP pool. The creator of the bingo is responsible for handing out the GP, based on whatever split you have decided. You do not need to finalize the bingo on time, the bingo will automatically finish at the exact second it needs to, the finalize command just does some final things, and hands out the gp.
 - A person can participate in several bingos at once.
 - Bingos are private to the server they were made in. In other words, you can only join it from that server. Global bingos are limited to the official bingos. However, for any bingo, the commands/trips the players do (to get loot) can be done anywhere.
 
@@ -25,7 +25,7 @@ To create a bingo, you need to input the following things:
 
 ## Managing your Bingo
 
-Commands for managing the bingo are in `/bingo manage`. You can add/remove tiles, add extra GP to the prize pool, and more.
+Commands for managing the bingo are in [[/bingo manage]]. You can add/remove tiles, add extra GP to the prize pool, and more.
 
 ### Adding Tiles
 
