--- a/docs/src/content/docs/bso/Custom Items/pets.mdx
+++ b/docs/src/content/docs/bso/Custom Items/pets.mdx
@@ -1,3 +1,8 @@
+---
+title: "Pets"
+---
+
+import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 There are pets exclusive to BSO that provide unique and powerful perks and are rare drops from certain activities. These custom pets must be equipped using [[/gear pet equip name\:PetName]], and in most cases, only one pet's effect can be active at once. All pets with a per-minute drop rate can only be obtained on trips that are at least 20 minutes long.
 
