--- a/docs/src/content/docs/bso/Custom Items/pets.mdx
+++ b/docs/src/content/docs/bso/Custom Items/pets.mdx
@@ -11,7 +11,7 @@ There are pets exclusive to BSO that provide unique and powerful perks and are r
 | **Pet**    | **Perk**                                                                                                                                                                                                             | **Source**                                                                     |
 | ---------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------ |
 | Shelldon   | 2x fishing speed                                                                                                                                                                                                     | 1/8,000 minutes of Fishing                                                     |
-| Remy       | 2x cooking speed (does not stack with [Dwarven gauntlets](equippables/#dwarven-tools))                                                                                                                              | 1/5,000† minutes of Cooking                                                    |
+| Remy       | +100% cooking speed (*Stacks with Dwarven gauntlets +150% & Cooking master cape +250%, except for wines & karambwan*)                                                                                                                              | 1/5,000† minutes of Cooking                                                    |
 | Lil Lamb   | Boosts XP from offering bones by 1x–3x                                                                                                                                                                               | 1/8,000 minutes of Alching (approx. 320k alchs)                                |
 | Klik       | Auto-smelts ore and cooks fish (no XP), 3x tanning boost (does not stack with [Dwarven greathammer](equippables/#dwarven-tools)), required for smelting Dwarven Bars                                              | 1/8,500† minutes of Killing Dragons                                            |
 | Wintertoad | Halves Fight Caves time                                                                                                                                                                                              | 1/3,000† minutes of Wintertodt                                                 |
