Update monsters wiki page

--- a/docs/src/content/docs/osb/monsters.mdx
+++ b/docs/src/content/docs/osb/monsters.mdx
@@ -669,6 +669,8 @@ You can have one of the following boosts:
 
 - 7% boost for [[Harmonised nightmare staff]]
 
+- 6% boost for [[Warped sceptre (uncharged)]]
+
 - 5% boost for [[Iban's staff]]
 
 ---
@@ -1878,6 +1880,8 @@ These boosts are applied from just being in your bank, and do not need to be equ
 You can have one of the following boosts:
 
 - 5% boost for [[Harmonised nightmare staff]]
+
+- 4% boost for [[Warped sceptre (uncharged)]]
 
 - 3% boost for [[Iban's staff]]
 
@@ -3158,7 +3162,7 @@ You can have one of the following boosts:
 
 **Items Required**
 
-- [[Trident of the seas]] or [[Trident of the seas (full)]] or [[Uncharged trident]] or [[Uncharged toxic trident]] or [[Trident of the swamp]] or [[Sanguinesti staff]] or [[Harmonised nightmare staff]]
+- [[Warped sceptre (uncharged)]] or [[Trident of the seas]] or [[Trident of the seas (full)]] or [[Uncharged trident]] or [[Uncharged toxic trident]] or [[Trident of the swamp]] or [[Sanguinesti staff]] or [[Harmonised nightmare staff]]
 
 </TabItem>
 <TabItem label="Boosts">
@@ -3183,6 +3187,8 @@ You can have one of the following boosts:
 - 5% boost for [[Trident of the seas]]
 
 - 5% boost for [[Uncharged trident]]
+
+- 3% boost for [[Warped sceptre (uncharged)]]
 
 ---
 
@@ -6363,7 +6369,7 @@ You can have one of the following boosts:
 
 - 2% boost for [[Trident of the seas]]
 
-- 1% boost for [[Iban's staff]]
+- 1% boost for [[Warped sceptre (uncharged)]]
 
 ---
 
