--- a/docs/src/content/docs/osb/Skills/mining.mdx
+++ b/docs/src/content/docs/osb/Skills/mining.mdx
@@ -109,30 +109,30 @@ The only other thing unidentified minerals can be used to purchase are:
 | Gem rock | 99 | 115,000 | Yes | Karamja Medium | No items |
 | Gem rock | 90 | 107,000 | Yes | Karamja Medium | No items |
 | Granite | 80 | 105,000 | Yes |  | No items |
-| Gem rock | 99 | 98,000 | No | Karamja Medium | 48x Uncut diamond, 60x Uncut emerald, 355x Uncut jade, 707x Uncut opal, 178x Uncut red topaz, 60x Uncut ruby, 107x Uncut sapphire |
+| Gem rock | 99 | 98,000 | No | Karamja Medium | 48x Uncut diamond, 59x Uncut emerald, 355x Uncut jade, 707x Uncut opal, 178x Uncut red topaz, 59x Uncut ruby, 106x Uncut sapphire |
 | Gem rock | 80 | 97,000 | Yes | Karamja Medium | No items |
 | Granite | 70 | 94,000 | Yes |  | No items |
 | Sandstone | 99 | 93,000 | Yes |  | No items |
-| Gem rock | 90 | 92,000 | No | Karamja Medium | 45x Uncut diamond, 56x Uncut emerald, 333x Uncut jade, 663x Uncut opal, 166x Uncut red topaz, 56x Uncut ruby, 100x Uncut sapphire |
+| Gem rock | 90 | 92,000 | No | Karamja Medium | 45x Uncut diamond, 56x Uncut emerald, 333x Uncut jade, 663x Uncut opal, 167x Uncut red topaz, 56x Uncut ruby, 100x Uncut sapphire |
 | Gem rock | 70 | 87,000 | Yes | Karamja Medium | No items |
 | Sandstone | 90 | 86,000 | Yes |  | No items |
-| Gem rock | 80 | 85,000 | No | Karamja Medium | 41x Uncut diamond, 52x Uncut emerald, 306x Uncut jade, 612x Uncut opal, 154x Uncut red topaz, 51x Uncut ruby, 92x Uncut sapphire |
-| Sandstone | 99 | 83,000 | No |  | 464x Sandstone (10kg), 464x Sandstone (1kg), 463x Sandstone (2kg), 464x Sandstone (5kg) |
+| Gem rock | 80 | 85,000 | No | Karamja Medium | 42x Uncut diamond, 51x Uncut emerald, 306x Uncut jade, 613x Uncut opal, 153x Uncut red topaz, 51x Uncut ruby, 93x Uncut sapphire |
+| Sandstone | 99 | 84,000 | No |  | 463x Sandstone (10kg), 463x Sandstone (1kg), 463x Sandstone (2kg), 464x Sandstone (5kg) |
 | Iron ore | 80 | 82,000 | Yes |  | 24x Unidentified minerals |
-| Iron ore | 70 | 81,000 | Yes |  | 24x Unidentified minerals |
-| Sandstone | 90 | 78,000 | No |  | 431x Sandstone (10kg), 430x Sandstone (1kg), 431x Sandstone (2kg), 431x Sandstone (5kg) |
-| Gem rock | 70 | 77,000 | No | Karamja Medium | 38x Uncut diamond, 47x Uncut emerald, 277x Uncut jade, 554x Uncut opal, 139x Uncut red topaz, 47x Uncut ruby, 83x Uncut sapphire |
+| Iron ore | 70 | 81,000 | Yes |  | 23x Unidentified minerals |
+| Sandstone | 90 | 78,000 | No |  | 430x Sandstone (10kg), 431x Sandstone (1kg), 431x Sandstone (2kg), 430x Sandstone (5kg) |
+| Gem rock | 70 | 77,000 | No | Karamja Medium | 37x Uncut diamond, 47x Uncut emerald, 277x Uncut jade, 554x Uncut opal, 139x Uncut red topaz, 47x Uncut ruby, 84x Uncut sapphire |
 | Sandstone | 80 | 77,000 | Yes |  | No items |
-| Sandstone | 80 | 71,000 | No |  | 394x Sandstone (10kg), 393x Sandstone (1kg), 393x Sandstone (2kg), 393x Sandstone (5kg) |
+| Sandstone | 80 | 71,000 | No |  | 394x Sandstone (10kg), 394x Sandstone (1kg), 394x Sandstone (2kg), 394x Sandstone (5kg) |
 | Sandstone | 70 | 68,000 | Yes |  | No items |
-| Granite | 99 | 66,000 | No |  | 366x Granite (2kg), 366x Granite (500g), 365x Granite (5kg) |
-| Granite | 90 | 63,000 | No |  | 351x Granite (2kg), 349x Granite (500g), 351x Granite (5kg) |
-| Sandstone | 70 | 63,000 | No |  | 350x Sandstone (10kg), 350x Sandstone (1kg), 350x Sandstone (2kg), 349x Sandstone (5kg) |
-| Granite | 80 | 60,000 | No |  | 332x Granite (2kg), 332x Granite (500g), 334x Granite (5kg) |
+| Granite | 99 | 66,000 | No |  | 365x Granite (2kg), 366x Granite (500g), 365x Granite (5kg) |
+| Granite | 90 | 63,000 | No |  | 351x Granite (2kg), 351x Granite (500g), 351x Granite (5kg) |
+| Sandstone | 70 | 63,000 | No |  | 349x Sandstone (10kg), 348x Sandstone (1kg), 350x Sandstone (2kg), 349x Sandstone (5kg) |
+| Granite | 80 | 60,000 | No |  | 333x Granite (2kg), 333x Granite (500g), 332x Granite (5kg) |
 | Iron ore | 80 | 58,000 | No |  | 1.7k Iron ore, 17x Unidentified minerals |
 | Silver ore | 99 | 58,000 | Yes |  | No items |
 | Iron ore | 70 | 57,000 | No |  | 1.6k Iron ore, 17x Unidentified minerals |
-| Granite | 70 | 56,000 | No |  | 310x Granite (2kg), 311x Granite (500g), 312x Granite (5kg) |
+| Granite | 70 | 56,000 | No |  | 311x Granite (2kg), 311x Granite (500g), 311x Granite (5kg) |
 | Silver ore | 90 | 54,000 | Yes |  | No items |
 | Silver ore | 99 | 53,000 | No |  | 1.3k Silver ore |
 | Silver ore | 80 | 50,000 | Yes |  | No items |
@@ -142,18 +142,18 @@ The only other thing unidentified minerals can be used to purchase are:
 | Coal | 90 | 42,000 | Yes |  | 15x Unidentified minerals |
 | Gold ore | 99 | 42,000 | Yes |  | No items |
 | Silver ore | 70 | 42,000 | No |  | 1.1k Silver ore |
-| Gold ore | 99 | 40,000 | No |  | 622x Gold ore |
+| Gold ore | 99 | 40,000 | No |  | 621x Gold ore |
 | Coal | 80 | 38,000 | Yes |  | 13x Unidentified minerals |
 | Copper ore | 70 | 38,000 | Yes |  | No items |
 | Gold ore | 90 | 38,000 | Yes |  | No items |
 | Tin ore | 70 | 38,000 | Yes |  | No items |
-| Gold ore | 90 | 37,000 | No |  | 576x Gold ore |
+| Gold ore | 90 | 37,000 | No |  | 575x Gold ore |
 | Coal | 90 | 36,000 | No |  | 727x Coal, 13x Unidentified minerals |
 | Gold ore | 80 | 35,000 | Yes |  | No items |
 | Coal | 70 | 34,000 | Yes |  | 12x Unidentified minerals |
-| Gold ore | 80 | 34,000 | No |  | 524x Gold ore |
+| Gold ore | 80 | 34,000 | No |  | 523x Gold ore |
 | Mithril ore | 99 | 32,000 | Yes |  | No items |
-| Coal | 70 | 30,000 | No |  | 610x Coal, 11x Unidentified minerals |
+| Coal | 70 | 30,000 | No |  | 611x Coal, 11x Unidentified minerals |
 | Gold ore | 70 | 30,000 | Yes |  | No items |
 | Granite | 60 | 30,000 | Yes |  | No items |
 | Mithril ore | 90 | 30,000 | Yes |  | No items |
@@ -161,21 +161,21 @@ The only other thing unidentified minerals can be used to purchase are:
 | Iron ore | 60 | 29,000 | Yes |  | 9x Unidentified minerals |
 | Gem rock | 60 | 28,000 | Yes | Karamja Medium | No items |
 | Mithril ore | 90 | 28,000 | No |  | 353x Mithril ore |
-| Gem rock | 60 | 27,000 | No | Karamja Medium | 13x Uncut diamond, 17x Uncut emerald, 97x Uncut jade, 195x Uncut opal, 49x Uncut red topaz, 17x Uncut ruby, 30x Uncut sapphire |
+| Gem rock | 60 | 27,000 | No | Karamja Medium | 13x Uncut diamond, 17x Uncut emerald, 98x Uncut jade, 195x Uncut opal, 49x Uncut red topaz, 17x Uncut ruby, 30x Uncut sapphire |
 | Mithril ore | 80 | 27,000 | Yes |  | No items |
 | Tainted essence chunk | 70 | 27,000 | No |  | 22.6k Tainted essence chunk |
 | Granite | 50 | 26,000 | Yes |  | No items |
 | Iron ore | 50 | 26,000 | Yes |  | No items |
-| Mithril ore | 80 | 26,000 | No |  | 323x Mithril ore |
-| Granite | 60 | 25,000 | No |  | 139x Granite (2kg), 138x Granite (500g), 139x Granite (5kg) |
-| Iron ore | 60 | 25,000 | No |  | 719x Iron ore, 8x Unidentified minerals |
+| Granite | 60 | 25,000 | No |  | 139x Granite (2kg), 139x Granite (500g), 139x Granite (5kg) |
+| Iron ore | 60 | 25,000 | No |  | 720x Iron ore, 8x Unidentified minerals |
+| Mithril ore | 80 | 25,000 | No |  | 322x Mithril ore |
 | Gem rock | 50 | 24,000 | Yes | Karamja Medium | No items |
 | Mithril ore | 70 | 24,000 | Yes |  | No items |
-| Gem rock | 50 | 23,000 | No | Karamja Medium | 12x Uncut diamond, 15x Uncut emerald, 86x Uncut jade, 170x Uncut opal, 43x Uncut red topaz, 14x Uncut ruby, 26x Uncut sapphire |
+| Gem rock | 50 | 23,000 | No | Karamja Medium | 12x Uncut diamond, 15x Uncut emerald, 85x Uncut jade, 170x Uncut opal, 43x Uncut red topaz, 15x Uncut ruby, 26x Uncut sapphire |
 | Iron ore | 40 | 23,000 | Yes |  | No items |
 | Amethyst | 99 | 22,000 | Yes |  | 5x Unidentified minerals |
-| Granite | 50 | 22,000 | No |  | 123x Granite (2kg), 123x Granite (500g), 123x Granite (5kg) |
-| Mithril ore | 70 | 22,000 | No |  | 283x Mithril ore |
+| Granite | 50 | 22,000 | No |  | 123x Granite (2kg), 122x Granite (500g), 123x Granite (5kg) |
+| Mithril ore | 70 | 22,000 | No |  | 284x Mithril ore |
 | Sandstone | 60 | 21,000 | Yes |  | No items |
 | Gem rock | 40 | 20,000 | Yes | Karamja Medium | No items |
 | Iron ore | 30 | 20,000 | Yes |  | No items |
@@ -183,14 +183,15 @@ The only other thing unidentified minerals can be used to purchase are:
 | Copper ore | 70 | 19,000 | No |  | 1.1k Copper ore |
 | Tin ore | 70 | 19,000 | No |  | 1.1k Tin ore |
 | Adamantite ore | 90 | 18,000 | Yes |  | No items |
-| Iron ore | 30 | 18,000 | No |  | 528x Iron ore |
+| Iron ore | 30 | 18,000 | No |  | 529x Iron ore |
 | Sandstone | 50 | 18,000 | Yes |  | No items |
 | Adamantite ore | 90 | 17,000 | No |  | 186x Adamantite ore |
+| Daeyalt essence rock | 70 | 17,000 | Yes |  | 8.5k Daeyalt shard |
 | Iron ore | 20 | 17,000 | Yes |  | No items |
 | Adamantite ore | 80 | 16,000 | Yes |  | No items |
 | Iron ore | 20 | 16,000 | No |  | 464x Iron ore |
 | Silver ore | 60 | 16,000 | Yes |  | No items |
-| Adamantite ore | 80 | 15,000 | No |  | 168x Adamantite ore |
+| Adamantite ore | 80 | 15,000 | No |  | 167x Adamantite ore |
 | Sandstone | 40 | 15,000 | Yes |  | No items |
 | Adamantite ore | 70 | 14,000 | Yes |  | No items |
 | Copper ore | 50 | 14,000 | Yes |  | No items |
@@ -208,7 +209,7 @@ The only other thing unidentified minerals can be used to purchase are:
 | Copper ore | 30 | 11,000 | Yes |  | No items |
 | Tin ore | 30 | 11,000 | Yes |  | No items |
 | Copper ore | 20 | 10,000 | Yes |  | No items |
-| Daeyalt essence rock | 70 | 10,000 | Yes |  | No items |
+| Daeyalt essence rock | 70 | 10,000 | No |  | 5k Daeyalt shard |
 | Gold ore | 60 | 10,000 | Yes |  | No items |
 | Pure essence | 70 | 10,000 | Yes |  | No items |
 | Rune essence | 70 | 10,000 | Yes |  | No items |
@@ -222,7 +223,7 @@ The only other thing unidentified minerals can be used to purchase are:
 | Gold ore | 50 | 8,000 | Yes |  | No items |
 | Mithril ore | 60 | 8,000 | Yes |  | No items |
 | Tin ore | 10 | 8,000 | Yes |  | No items |
-| Coal | 40 | 7,000 | No |  | 155x Coal |
+| Coal | 40 | 7,000 | No |  | 157x Coal |
 | Copper ore | 1 | 7,000 | Yes |  | No items |
 | Gold ore | 40 | 7,000 | Yes |  | No items |
 | Pure essence | 70 | 7,000 | No |  | 1.5k Pure essence |
@@ -231,17 +232,18 @@ The only other thing unidentified minerals can be used to purchase are:
 | Tin ore | 1 | 7,000 | Yes |  | No items |
 | Volcanic ash | 50 | 7,000 | Yes |  | No items |
 | Coal | 30 | 6,000 | Yes |  | No items |
-| Copper ore | 1 | 6,000 | No |  | 352x Copper ore |
+| Copper ore | 1 | 6,000 | No |  | 353x Copper ore |
+| Daeyalt essence rock | 60 | 6,000 | Yes |  | 3.2k Daeyalt shard |
 | Tin ore | 1 | 6,000 | No |  | 353x Tin ore |
 | Volcanic ash | 30 | 6,000 | Yes |  | No items |
 | Clay | 70 | 5,000 | No |  | 1.1k Clay |
 | Clay | 50 | 4,000 | Yes |  | No items |
 | Clay | 30 | 3,000 | Yes |  | No items |
-| Daeyalt essence rock | 60 | 3,000 | Yes |  | No items |
+| Daeyalt essence rock | 60 | 3,000 | No |  | 1.9k Daeyalt shard |
 | Pure essence | 30 | 3,000 | Yes |  | No items |
 | Rune essence | 1 | 3,000 | Yes |  | No items |
 | Clay | 1 | 2,000 | Yes |  | No items |
-| Clay | 1 | 1,000 | No |  | 352x Clay |
+| Clay | 1 | 1,000 | No |  | 353x Clay |
 | Saltpetre | 1 | 0 | Yes |  | No items |
 
 {/* DO NOT EDIT - This section is auto-generated by the build script */}
