--- a/docs/src/content/docs/getting-started/changelog.mdx
+++ b/docs/src/content/docs/getting-started/changelog.mdx
@@ -24,7 +24,7 @@ import Update from "../../../components/Update.astro";
 - Added the Zombie Pirate Locker to [[/open]], it can be opened using the [[Zombie pirate key]].
 - Zombie pirates now count as zombie/pirate slayer tasks.
 - If you try to kill a monster that can only be killed in the wilderness (but you didn't specify to use the wilderness), it now gives a better message showing how to do that.
-- The [[30107]] now drops from elligible activities (mining runite, chopping yews/magics/maples) at a rate of 1 per hour, if you have finished the Children Of The Sun quest.
+- The [[30107]] now drops from eligible activities (mining runite, chopping yews/magics/maples) at a rate of 1 per hour, if you have finished the Children Of The Sun quest.
 - Hueycoatl bug fixes: dropping less hides than it should, using no food, pet rate being too common.
 - Added the [Amoxliatl](/osb/monsters/#amoxliatl) monster, for the boosts/requirements/etc, see the [monsters page](/osb/monsters/#amoxliatl)
   - Added the [combat achievements](/osb/combat-achievements/)
