--- a/docs/src/content/docs/osb/Skills/mining.mdx
+++ b/docs/src/content/docs/osb/Skills/mining.mdx
@@ -45,7 +45,7 @@ Using this filter when mining ores allows your minion to reach much higher xp ra
 
 ## Gold & Silver Ore
 
-If you have 99 crafting, you will get a significant 70% boost to your trip time, due to using the bank at the crafting guild. This applies only when mining gold and silver ores. You cannot recieve gold nuggets from mining gold or silver ores, rather only from [Motherlode mine](motherlode-mine.md).
+If you have 99 crafting, you will get a significant 70% boost to your trip time, due to using the bank at the crafting guild. This applies only when mining gold and silver ores. You cannot receive gold nuggets from mining gold or silver ores, rather only from [Motherlode mine](motherlode-mine.md).
 
 ## Celestial Ring/Signet
 
