--- a/docs/src/content/docs/osb/Skills/mining.mdx
+++ b/docs/src/content/docs/osb/Skills/mining.mdx
@@ -109,26 +109,26 @@ The only other thing unidentified minerals can be used to purchase are:
 | Gem rock | 99 | 115,000 | Yes | Karamja Medium | No items |
 | Gem rock | 90 | 107,000 | Yes | Karamja Medium | No items |
 | Granite | 80 | 105,000 | Yes |  | No items |
-| Gem rock | 99 | 98,000 | No | Karamja Medium | 48x Uncut diamond, 59x Uncut emerald, 354x Uncut jade, 708x Uncut opal, 177x Uncut red topaz, 59x Uncut ruby, 107x Uncut sapphire |
+| Gem rock | 99 | 98,000 | No | Karamja Medium | 48x Uncut diamond, 59x Uncut emerald, 354x Uncut jade, 710x Uncut opal, 177x Uncut red topaz, 59x Uncut ruby, 106x Uncut sapphire |
 | Gem rock | 80 | 97,000 | Yes | Karamja Medium | No items |
 | Granite | 70 | 94,000 | Yes |  | No items |
 | Sandstone | 99 | 93,000 | Yes |  | No items |
-| Gem rock | 90 | 92,000 | No | Karamja Medium | 45x Uncut diamond, 55x Uncut emerald, 332x Uncut jade, 663x Uncut opal, 167x Uncut red topaz, 56x Uncut ruby, 100x Uncut sapphire |
+| Gem rock | 90 | 92,000 | No | Karamja Medium | 44x Uncut diamond, 56x Uncut emerald, 333x Uncut jade, 663x Uncut opal, 166x Uncut red topaz, 56x Uncut ruby, 100x Uncut sapphire |
 | Gem rock | 70 | 87,000 | Yes | Karamja Medium | No items |
 | Sandstone | 90 | 86,000 | Yes |  | No items |
-| Gem rock | 80 | 85,000 | No | Karamja Medium | 41x Uncut diamond, 51x Uncut emerald, 307x Uncut jade, 612x Uncut opal, 153x Uncut red topaz, 51x Uncut ruby, 93x Uncut sapphire |
-| Sandstone | 99 | 83,000 | No |  | 463x Sandstone (10kg), 463x Sandstone (1kg), 464x Sandstone (2kg), 463x Sandstone (5kg) |
+| Gem rock | 80 | 85,000 | No | Karamja Medium | 41x Uncut diamond, 52x Uncut emerald, 307x Uncut jade, 613x Uncut opal, 153x Uncut red topaz, 52x Uncut ruby, 92x Uncut sapphire |
+| Sandstone | 99 | 84,000 | No |  | 462x Sandstone (10kg), 464x Sandstone (1kg), 464x Sandstone (2kg), 464x Sandstone (5kg) |
 | Iron ore | 80 | 82,000 | Yes |  | 24x Unidentified minerals |
-| Iron ore | 70 | 81,000 | Yes |  | 23x Unidentified minerals |
-| Sandstone | 90 | 78,000 | No |  | 431x Sandstone (10kg), 430x Sandstone (1kg), 430x Sandstone (2kg), 431x Sandstone (5kg) |
-| Gem rock | 70 | 77,000 | No | Karamja Medium | 37x Uncut diamond, 47x Uncut emerald, 278x Uncut jade, 553x Uncut opal, 139x Uncut red topaz, 47x Uncut ruby, 83x Uncut sapphire |
+| Iron ore | 70 | 81,000 | Yes |  | 24x Unidentified minerals |
+| Sandstone | 90 | 78,000 | No |  | 431x Sandstone (10kg), 431x Sandstone (1kg), 430x Sandstone (2kg), 430x Sandstone (5kg) |
+| Gem rock | 70 | 77,000 | No | Karamja Medium | 37x Uncut diamond, 47x Uncut emerald, 277x Uncut jade, 554x Uncut opal, 139x Uncut red topaz, 46x Uncut ruby, 83x Uncut sapphire |
 | Sandstone | 80 | 77,000 | Yes |  | No items |
-| Sandstone | 80 | 71,000 | No |  | 393x Sandstone (10kg), 394x Sandstone (1kg), 393x Sandstone (2kg), 393x Sandstone (5kg) |
+| Sandstone | 80 | 71,000 | No |  | 393x Sandstone (10kg), 395x Sandstone (1kg), 393x Sandstone (2kg), 394x Sandstone (5kg) |
 | Sandstone | 70 | 68,000 | Yes |  | No items |
-| Granite | 99 | 66,000 | No |  | 365x Granite (2kg), 365x Granite (500g), 365x Granite (5kg) |
-| Granite | 90 | 63,000 | No |  | 351x Granite (2kg), 350x Granite (500g), 350x Granite (5kg) |
-| Sandstone | 70 | 63,000 | No |  | 350x Sandstone (10kg), 349x Sandstone (1kg), 350x Sandstone (2kg), 349x Sandstone (5kg) |
-| Granite | 80 | 60,000 | No |  | 333x Granite (2kg), 333x Granite (500g), 331x Granite (5kg) |
+| Granite | 99 | 66,000 | No |  | 365x Granite (2kg), 366x Granite (500g), 365x Granite (5kg) |
+| Granite | 90 | 63,000 | No |  | 351x Granite (2kg), 351x Granite (500g), 350x Granite (5kg) |
+| Sandstone | 70 | 63,000 | No |  | 350x Sandstone (10kg), 348x Sandstone (1kg), 350x Sandstone (2kg), 349x Sandstone (5kg) |
+| Granite | 80 | 60,000 | No |  | 332x Granite (2kg), 332x Granite (500g), 333x Granite (5kg) |
 | Iron ore | 80 | 58,000 | No |  | 1.7k Iron ore, 17x Unidentified minerals |
 | Silver ore | 99 | 58,000 | Yes |  | No items |
 | Iron ore | 70 | 57,000 | No |  | 1.6k Iron ore, 17x Unidentified minerals |
@@ -137,18 +137,18 @@ The only other thing unidentified minerals can be used to purchase are:
 | Silver ore | 99 | 53,000 | No |  | 1.3k Silver ore |
 | Silver ore | 80 | 50,000 | Yes |  | No items |
 | Silver ore | 80 | 47,000 | No |  | 1.2k Silver ore |
-| Coal | 99 | 45,000 | Yes |  | 16x Unidentified minerals |
+| Coal | 99 | 45,000 | Yes |  | 15x Unidentified minerals |
 | Silver ore | 70 | 44,000 | Yes |  | No items |
 | Coal | 90 | 42,000 | Yes |  | 14x Unidentified minerals |
 | Gold ore | 99 | 42,000 | Yes |  | No items |
 | Silver ore | 70 | 42,000 | No |  | 1.1k Silver ore |
-| Gold ore | 99 | 40,000 | No |  | 623x Gold ore |
+| Gold ore | 99 | 40,000 | No |  | 621x Gold ore |
 | Coal | 80 | 38,000 | Yes |  | 13x Unidentified minerals |
 | Copper ore | 70 | 38,000 | Yes |  | No items |
 | Gold ore | 90 | 38,000 | Yes |  | No items |
 | Tin ore | 70 | 38,000 | Yes |  | No items |
-| Gold ore | 90 | 37,000 | No |  | 577x Gold ore |
-| Coal | 90 | 36,000 | No |  | 729x Coal, 13x Unidentified minerals |
+| Gold ore | 90 | 37,000 | No |  | 576x Gold ore |
+| Coal | 90 | 36,000 | No |  | 726x Coal, 13x Unidentified minerals |
 | Gold ore | 80 | 35,000 | Yes |  | No items |
 | Coal | 70 | 34,000 | Yes |  | 12x Unidentified minerals |
 | Gold ore | 80 | 34,000 | No |  | 524x Gold ore |
@@ -158,29 +158,30 @@ The only other thing unidentified minerals can be used to purchase are:
 | Granite | 60 | 30,000 | Yes |  | No items |
 | Mithril ore | 90 | 30,000 | Yes |  | No items |
 | Tainted essence chunk | 70 | 30,000 | Yes |  | No items |
-| Gold ore | 70 | 29,000 | No |  | 458x Gold ore |
 | Iron ore | 60 | 29,000 | Yes |  | 9x Unidentified minerals |
 | Gem rock | 60 | 28,000 | Yes | Karamja Medium | No items |
-| Mithril ore | 90 | 28,000 | No |  | 352x Mithril ore |
-| Gem rock | 60 | 27,000 | No | Karamja Medium | 14x Uncut diamond, 17x Uncut emerald, 98x Uncut jade, 195x Uncut opal, 49x Uncut red topaz, 17x Uncut ruby, 29x Uncut sapphire |
+| Mithril ore | 90 | 28,000 | No |  | 353x Mithril ore |
+| Gem rock | 60 | 27,000 | No | Karamja Medium | 13x Uncut diamond, 17x Uncut emerald, 97x Uncut jade, 195x Uncut opal, 49x Uncut red topaz, 17x Uncut ruby, 30x Uncut sapphire |
 | Mithril ore | 80 | 27,000 | Yes |  | No items |
 | Tainted essence chunk | 70 | 27,000 | No |  | 22.6k Tainted essence chunk |
 | Granite | 50 | 26,000 | Yes |  | No items |
 | Iron ore | 50 | 26,000 | Yes |  | No items |
-| Granite | 60 | 25,000 | No |  | 139x Granite (2kg), 138x Granite (500g), 139x Granite (5kg) |
+| Granite | 60 | 25,000 | No |  | 139x Granite (2kg), 139x Granite (500g), 139x Granite (5kg) |
 | Iron ore | 60 | 25,000 | No |  | 720x Iron ore, 8x Unidentified minerals |
-| Mithril ore | 80 | 25,000 | No |  | 323x Mithril ore |
+| Mithril ore | 80 | 25,000 | No |  | 322x Mithril ore |
 | Gem rock | 50 | 24,000 | Yes | Karamja Medium | No items |
 | Mithril ore | 70 | 24,000 | Yes |  | No items |
-| Gem rock | 50 | 23,000 | No | Karamja Medium | 12x Uncut diamond, 14x Uncut emerald, 85x Uncut jade, 170x Uncut opal, 43x Uncut red topaz, 15x Uncut ruby, 26x Uncut sapphire |
+| Amethyst | 99 | 23,000 | Yes |  | 5x Unidentified minerals |
+| Gem rock | 50 | 23,000 | No | Karamja Medium | 12x Uncut diamond, 15x Uncut emerald, 85x Uncut jade, 171x Uncut opal, 43x Uncut red topaz, 15x Uncut ruby, 26x Uncut sapphire |
 | Iron ore | 40 | 23,000 | Yes |  | No items |
-| Amethyst | 99 | 22,000 | Yes |  | 5x Unidentified minerals |
-| Granite | 50 | 22,000 | No |  | 123x Granite (2kg), 123x Granite (500g), 123x Granite (5kg) |
-| Mithril ore | 70 | 22,000 | No |  | 284x Mithril ore |
+| Amethyst | 99 | 22,000 | No |  | 94x Amethyst, 5x Unidentified minerals |
+| Granite | 50 | 22,000 | No |  | 123x Granite (2kg), 122x Granite (500g), 123x Granite (5kg) |
+| Mithril ore | 70 | 22,000 | No |  | 283x Mithril ore |
 | Sandstone | 60 | 21,000 | Yes |  | No items |
+| Adamantite ore | 99 | 20,000 | Yes |  | No items |
 | Gem rock | 40 | 20,000 | Yes | Karamja Medium | No items |
 | Iron ore | 30 | 20,000 | Yes |  | No items |
-| Adamantite ore | 99 | 19,000 | Yes |  | No items |
+| Adamantite ore | 99 | 19,000 | No |  | 201x Adamantite ore |
 | Copper ore | 70 | 19,000 | No |  | 1.1k Copper ore |
 | Tin ore | 70 | 19,000 | No |  | 1.1k Tin ore |
 | Adamantite ore | 90 | 18,000 | Yes |  | No items |
@@ -191,7 +192,6 @@ The only other thing unidentified minerals can be used to purchase are:
 | Adamantite ore | 80 | 16,000 | Yes |  | No items |
 | Iron ore | 20 | 16,000 | No |  | 464x Iron ore |
 | Silver ore | 60 | 16,000 | Yes |  | No items |
-| Adamantite ore | 80 | 15,000 | No |  | 167x Adamantite ore |
 | Sandstone | 40 | 15,000 | Yes |  | No items |
 | Adamantite ore | 70 | 14,000 | Yes |  | No items |
 | Copper ore | 50 | 14,000 | Yes |  | No items |
@@ -205,7 +205,7 @@ The only other thing unidentified minerals can be used to purchase are:
 | Runite ore | 90 | 12,000 | Yes | COTS | No items |
 | Silver ore | 40 | 12,000 | Yes |  | No items |
 | Clay | 70 | 11,000 | Yes |  | No items |
-| Coal | 60 | 11,000 | Yes |  | 5x Unidentified minerals |
+| Coal | 60 | 11,000 | Yes |  | 4x Unidentified minerals |
 | Copper ore | 30 | 11,000 | Yes |  | No items |
 | Tin ore | 30 | 11,000 | Yes |  | No items |
 | Copper ore | 20 | 10,000 | Yes |  | No items |
@@ -215,7 +215,7 @@ The only other thing unidentified minerals can be used to purchase are:
 | Rune essence | 70 | 10,000 | Yes |  | No items |
 | Tin ore | 20 | 10,000 | Yes |  | No items |
 | Coal | 50 | 9,000 | Yes |  | No items |
-| Copper ore | 30 | 9,000 | No |  | 520x Copper ore |
+| Copper ore | 30 | 9,000 | No |  | 519x Copper ore |
 | Silver ore | 30 | 9,000 | Yes |  | No items |
 | Tin ore | 30 | 9,000 | No |  | 519x Tin ore |
 | Coal | 40 | 8,000 | Yes |  | No items |
@@ -232,7 +232,7 @@ The only other thing unidentified minerals can be used to purchase are:
 | Tin ore | 1 | 7,000 | Yes |  | No items |
 | Volcanic ash | 50 | 7,000 | Yes |  | No items |
 | Coal | 30 | 6,000 | Yes |  | No items |
-| Copper ore | 1 | 6,000 | No |  | 352x Copper ore |
+| Copper ore | 1 | 6,000 | No |  | 353x Copper ore |
 | Tin ore | 1 | 6,000 | No |  | 353x Tin ore |
 | Volcanic ash | 30 | 6,000 | Yes |  | No items |
 | Clay | 70 | 5,000 | No |  | 1.1k Clay |
@@ -242,7 +242,7 @@ The only other thing unidentified minerals can be used to purchase are:
 | Pure essence | 30 | 3,000 | Yes |  | No items |
 | Rune essence | 1 | 3,000 | Yes |  | No items |
 | Clay | 1 | 2,000 | Yes |  | No items |
-| Clay | 1 | 1,000 | No |  | 353x Clay |
+| Clay | 1 | 1,000 | No |  | 352x Clay |
 | Saltpetre | 1 | 0 | Yes |  | No items |
 
 {/* DO NOT EDIT - This section is auto-generated by the build script */}
